padding updates, add shadow, fix text align, delete old code, cleanup

--- a/web/src/styles/pages/pricing.scss
+++ b/web/src/styles/pages/pricing.scss
@@ -112,10 +112,13 @@ h2 {
 .upgrade {
     background: $beige;
     position: relative;
-    padding: 4.8rem 0;
+    padding: 4.8rem .8rem;
 
+    @include r(374) {
+        padding: 4.8rem 2.4rem;
+    }
     @include r(768) {
-        padding: 9rem 2.4rem;
+        padding: 9rem .8rem;
 
         &:before {
             background-image: url(assets/images/blob-outline-right.svg), url(assets/images/blob-magenta-right.svg);
